- `startdwarf`: fixed on 64-bit Linux

## Misc Improvements
- `embark-assistant`: switched to standard scrolling keys, improved spacing slightly

## API
- Added to ``Units`` module:
    - ``getStressCategory(unit)``
    - ``getStressCategoryRaw(level)``
    - ``stress_cutoffs`` (Lua: ``getStressCutoffs()``)

## Internals
- Added documentation for all RPC functions and a build-time check
- Use ``dlsym(3)`` to find vtables from libgraphics.so

## Structures
- Added ``start_dwarf_count`` on 64-bit Linux again and fixed scanning script
- ``army_controller``: added new vector from 0.44.11
-@ ``viewscreen_civlistst``: split ``unk_20`` into 3 pointers

================================================================================
# 0.44.12-alpha1

## Fixes
-@ macOS: fixed ``renderer`` vtable address on x64 (fixes `rendermax`)
- `stonesense`: fixed ``PLANT:DESERT_LIME:LEAF`` typo

## API
- Added C++-style linked list interface for DF linked lists

## Structures
- Dropped 0.44.11 support
- ``ui.squads``: Added fields new in 0.44.12

================================================================================
# 0.44.11-beta2.1

## Internals
-@ `stonesense`: fixed build

================================================================================
# 0.44.11-beta2

## Fixes
-@ Windows: Fixed console failing to initialize
- `command-prompt`: added support for commands that require a specific screen to be visible, e.g. `spotclean`
- `gui/workflow`: fixed advanced constraint menu for crafts

## API
- Added ``Screen::Hide`` to temporarily hide screens, like `command-prompt`

================================================================================
# 0.44.11-beta1

## Fixes
- Fixed displayed names (from ``Units::getVisibleName``) for units with identities
- Fixed potential memory leak in ``Screen::show()``
- `fix/dead-units`: fixed script trying to use missing isDiplomat function

## Misc Improvements
- Console: