@@ -42,6 +42,7 @@ git_describe_definition(DFHACK_GIT_DESCRIPTION)
 git_describe_definition(DFHACK_GIT_COMMIT)
 git_describe_definition(DFHACK_GIT_XML_EXPECTED_COMMIT)
 git_describe_definition(DFHACK_GIT_XML_COMMIT)
+git_describe_definition(DFHACK_BUILD_ID)
 if(${DFHACK_GIT_TAGGED_RESULT} EQUAL 0)
     file(APPEND ${git_describe_tmp_h} "#define DFHACK_GIT_TAGGED\n")
 endif()
